[package]
name = "percent-encoding-rfc3986"
version = "0.1.3"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>", "The rust-url developers"]
description = "RFC3986-compliant percent encoding and decoding"
repository = "https://github.com/Kixunil/percent-encoding-rfc3986/"
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["encoding", "decoding", "escaping", "rfc3986"]
categories = ["encoding", "no-std", "parser-implementations", "web-programming"]

[package.metadata.docs.rs]
features = ["std"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]

[dev-dependencies]
quickcheck = "1.0.3"
